force-app/main/default/objects/Customer_Review__c/fields/Beer__c.field-meta.xml
<CustomField>
    <fullName>Beer__c</fullName>
    <description>Lookup to the beer which the feedback is meant for</description>
    <label>Beer</label>
    <referenceTo>Beer__c</referenceTo>
    <relationshipLabel>Customer Reviews</relationshipLabel>
    <relationshipName>Customer_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>