force-app/main/default/objects/Customer_Review__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Full or partial name of the customer who submitted the feedback</description>
    <label>Customer Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>