force-app/main/default/objects/Customer_Review__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Optional details customer can leave</description>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>