force-app/main/default/objects/Customer_Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating scale for customers to rate beers</description>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsatisfactory - Would Not Recommend or Purchase Again</fullName>
            </value>
            <value>
                <fullName>Average - Would Not Purchase Again</fullName>
            </value>
            <value>
                <fullName>Good - Would Purchase Again</fullName>
            </value>
            <value>
                <fullName>Great - Would Recommend and Purchase Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>